Fix extra margin in mobile about page

--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -57,6 +57,12 @@
   padding-bottom: 30px;
 }
 
-.intro-about{
+.intro-about {
   margin-bottom: 100px;
+}
+
+@media (max-width: 800px) {
+  .intro-about {
+    margin-bottom: 0;
+  }
 }
